--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container px-5">
             <a class="navbar-brand" href="#">Главная</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://0nera.github.io/#">Главная</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="https://0nera.github.io/#">Главная</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://0nera.github.io/about">Обо мне</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://0nera.github.io/blog">Блог</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://0nera.github.io/projects">Проекты</a></li>
@@ -59,8 +61,8 @@
             <div class="row gx-5 justify-content-center">
                 <div class="col-lg-6">
                     <div class="text-center my-5">
-                        <h1 class="display-5 fw-bolder text-white mb-2">Быстро и качественно</h1>
-                        <p class="lead text-white-50 mb-4">Создаю программы, сайты, игры, мобильные приложения, бэкенд</p>
+                        <h1 class="display-5 fw-bolder text-white mb-2">Удобная операционная система</h1>
+                        <p class="lead text-white-50 mb-4">Операционная система с документацией на русском языке и открытым исходным кодом</p>
                         <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
                             <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#portfolio">Портфолио</a>
                             <a class="btn btn-outline-light btn-lg px-4" href="#contact">Связаться со мной</a>
