--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                         <h1 class="display-5 fw-bolder text-white mb-2">Удобная операционная система</h1>
                         <p class="lead text-white-50 mb-4">Операционная система с документацией на русском языке и открытым исходным кодом</p>
                         <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
-                            <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#portfolio">Портфолио</a>
-                            <a class="btn btn-outline-light btn-lg px-4" href="#contact">Связаться со мной</a>
+                            <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#portfolio">О проекте</a>
+                            <a class="btn btn-outline-light btn-lg px-4" href="#download">Скачать</a>
                         </div>
                     </div>
                 </div>
